--- a/maple.ini
+++ b/maple.ini
@@ -1,5 +1,5 @@
 Path := FileTools:-SplitPath(currentdir());
-for i from nops(Path) by -1 to 5 do AVP_Lib_Path := FileTools:-JoinPath([op(1 .. i, Path), "AVP_MAPLE_LIB"]); if FileTools:-Exists(AVP_Lib_Path) then break end if end do;
+for i from nops(Path) by -1 to 5 do AVP_Lib_Path := FileTools:-JoinPath([op(1 .. i, Path), "AVP_MAPLE_LIB\\"]); if FileTools:-Exists(AVP_Lib_Path) then break end if end do;
 Path := 'Path';
 i := 'i';
 # 
