--- a/maple.ini
+++ b/maple.ini
@@ -1,5 +1,7 @@
 Path := FileTools:-SplitPath(currentdir());
-for i from nops(Path) by -1 to 5 do AVP_Lib_Path := FileTools:-JoinPath([op(1 .. i, Path), "AVP_MAPLE_LIB"]); if FileTools:-Exists(AVP_Lib_Path) then break end if end do;
-Path := 'Path';
-i := 'i';
+for i from nops(Path) by -1 to 5 do AVP_Lib_Path := FileTools:-JoinPath([op(1 .. i, Path), "AVP_MAPLE_LIB\\"]); if FileTools:-Exists(AVP_Lib_Path) then break end if end do;
+# Path := 'Path':
+i := 'i':
+WriteMATLAB := proc (s::string) local s1, s2, s3; global f1; s1 := StringTools[SubstituteAll](s, "*", ".*"); s2 := StringTools[SubstituteAll](s1, "^", ".^"); s3 := StringTools[SubstituteAll](s2, "/", "./"); fprintf(f1, "%s", s3, output = string) end proc;
+interface(showassumed=0);
 # 
